# linux-ram-optimizer

./: .gitignore  AGENTS.md  Makefile  README.md  install.sh  pyproject.toml
ramopt/: __init__.py  __main__.py  analyze.py  cli.py  collect.py  proc.py  remediate.py  report.py
scripts/: check_sensitive.py  luks-ssd-trim.sh  pre-push.hook
tests/: test_analyze.py  test_collect.py  test_proc.py  test_remediate.py  test_report.py
tests/fixtures/: meminfo_healthy.txt  meminfo_stressed.txt  pressure_sample.txt  smaps_rollup_sample.txt  status_sample.txt
